// services/protos/logging_service.proto
syntax = "proto3";

package logging;

service LoggingService {
    rpc Log (LogRequest) returns (LogResponse) {}
    rpc ConfigureLogger (LoggerConfig) returns (ConfigResponse) {}
    rpc GetLogStatus (StatusRequest) returns (StatusResponse) {}
}

message LogRequest {
    string service_name = 1;
    string level = 2;
    string message = 3;
    string timestamp = 4;
    map<string, string> metadata = 5;
    string correlation_id = 6;
}

message LogResponse {
    bool success = 1;
    string message = 2;
}

message LoggerConfig {
    string service_name = 1;
    string log_level = 2;
    string log_format = 3;
    map<string, string> additional_config = 4;
}

message ConfigResponse {
    bool success = 1;
    string message = 2;
}

message StatusRequest {
    string service_name = 1;
}

message StatusResponse {
    bool active = 1;
    int32 messages_processed = 2;
    string current_log_file = 3;
    int64 bytes_written = 4;
}
